# ProjektowanieObiektowe

./: CMakeLists.txt
Zestaw1/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
Zestaw12/: zad3.cpp  zad5.cpp
Zestaw2/: zad2.cpp  zad3.cpp  zad4.cpp
Zestaw3/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
Zestaw4/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
Zestaw5/: zad1.cpp
Zestaw6/: zad2.cpp
Zestaw7/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp
Zestaw8/: zad1.cpp
Zestaw9/: zad1.md  zad2.cpp  zad4.md  zad5.cpp
