cmake_minimum_required(VERSION 3.27)
project(ProjektowanieObiektoweCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Zestaw3Zad1 Zestaw3/zad1.cpp)
add_executable(Zestaw3Zad2 Zestaw3/zad2.cpp)
add_executable(Zestaw3Zad3 Zestaw3/zad3.cpp)
add_executable(Zestaw3Zad4 Zestaw3/zad4.cpp)
add_executable(Zestaw3Zad5 Zestaw3/zad5.cpp)


