cmake_minimum_required(VERSION 3.27)
project(ProjektowanieObiektoweCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Zestaw4Zad1 Zestaw4/zad1.cpp)
add_executable(Zestaw4Zad2 Zestaw4/zad2.cpp)
add_executable(Zestaw4Zad3 Zestaw4/zad3.cpp)
add_executable(Zestaw4Zad4 Zestaw4/zad4.cpp)
add_executable(Zestaw4Zad5 Zestaw4/zad5.cpp)


