cmake_minimum_required(VERSION 3.27)
project(ProjektowanieObiektoweCpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(Zestaw7Zad1 Zestaw7/zad1.cpp)
add_executable(Zestaw7Zad2 Zestaw7/zad2.cpp)
add_executable(Zestaw7Zad3 Zestaw7/zad3.cpp)
add_executable(Zestaw7Zad4 Zestaw7/zad4.cpp)
add_executable(Zestaw7Zad5 Zestaw7/zad5.cpp)
add_executable(Zestaw7Zad6 Zestaw7/zad6.cpp)




